# rules_go

./: README.rst
go/private/: providers.bzl
go/private/rules/: stdlib.bzl  test.bzl
go/tools/builders/: BUILD.bazel  generate_test_main.go  package.go
go/tools/gopackagesdriver/: BUILD.bazel  aspect.bzl  driver.go
go/tools/gopackagesdriver/build_event_stream/: BUILD.bazel  build_event_stream.proto  command_line.proto  invocation_policy.proto  option_filters.proto
go/tools/testwrapper/: BUILD.bazel  test2json.go  wrap.go  wrap_test.go  xml.go  xml_test.go
go/tools/testwrapper/testdata/: report.json  report.xml
tests/core/go_test/: xmlreport_test.go
tests/legacy/examples/stamped_bin/: stamped_test.go
