load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "build_event_stream_proto",
    srcs = [
        "build_event_stream.proto",
        "command_line.proto",
        "invocation_policy.proto",
        "option_filters.proto",
    ],
    visibility = ["//visibility:private"],
)

go_proto_library(
    name = "build_event_stream_go_proto",
    importpath = "github.com/bazelbuild/rules_go/go/tools/gopackagesdriver/build_event_stream",
    proto = ":build_event_stream_proto",
    visibility = ["//go/tools/gopackagesdriver:__subpackages__"],
)
